--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <div id="app" class="w-full max-w-2xl mx-auto relative z-10">
         <header class="text-center mb-12">
             <div class="inline-block mb-3 px-5 py-1.5 border border-orange-500/20 bg-orange-500/5 rounded-full text-[10px] tracking-[0.3em] text-orange-400 uppercase font-bold">
-                Spiritual Prayer Time Calculator
+                Hindu Spiritual Prayer Time Calculator
             </div>
             <h1 class="text-5xl md:text-6xl font-bold text-orange-500 orange-glow tracking-widest mb-4">TRIKAL-SANDHYA</h1>
             <p class="text-slate-400 font-light tracking-wide italic">"48 mins to align your prayers with the movements of the Sun"</p>
